<resources>
    <string name="app_name">AndroidAnimation</string>
    <string name="button_value_animator">Value Animator</string>
    <string name="button_go_property_animation">Property Animation</string>
    <string name="button_value_animator_with_type_evaluator">Value Animator With Type Evaluator</string>
    <string name="button_object_animator">Object Animator</string>
    <string name="button_object_animator_with_type_evaluator">Object Animator With Type Evaluator</string>
    <string name="button_multi_animations_using_animatorset">Multi Animations Using AnimatorSet</string>
    <string name="button_change_visibility">CHANGE VISIBILITY</string>
    <string name="button_scale_change_button">SCALE CHANGE BUTTON</string>
</resources>
