<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyAnimationActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/property_animation_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_android_pink_24dp" />

    <Button
        android:id="@+id/property_animation_value_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_value_animator"
        app:layout_constraintBottom_toTopOf="@id/property_animation_value_with_type_evaluator_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/property_animation_value_with_type_evaluator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_value_animator_with_type_evaluator"
        app:layout_constraintBottom_toTopOf="@id/property_animation_object_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/property_animation_object_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_object_animator"
        app:layout_constraintBottom_toTopOf="@id/property_animation_object_with_type_evaluator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/property_animation_object_with_type_evaluator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_object_animator_with_type_evaluator"
        app:layout_constraintBottom_toTopOf="@id/property_animation_multi_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <Button
        android:id="@+id/property_animation_multi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multi_animations_using_animatorset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>